--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
        </div> -->
 		</div>
 
-        <style>
+ <style>
     body {
         font-family: 'Montserrat', sans-serif;
         font-weight: 700;
@@ -378,16 +378,16 @@
     }
 
     .pricing-table {
-        width: 90%; /* Adjust the width to leave a small gap on both sides */
+        width: 94%; /* Increased the width to leave a larger gap on both sides */
         margin: 0 auto; /* Center the table */
         border-collapse: collapse;
-        border: 2px solid #fff; /* White border */
+        border: 4px solid #fff; /* Increased the white border thickness */
     }
 
     .pricing-option {
         text-align: center;
         padding: 20px;
-        border: 1px solid #fff; /* White border */
+        border: 2px solid #fff; /* White border */
     }
 
     .pricing-option h3 {
@@ -425,28 +425,35 @@
         color: #fff; /* White text color */
         text-align: center; /* Center-align the sub-heading */
     }
+
+    .divider {
+        border-bottom: 2px solid #fff; /* White dividing line */
+    }
 </style>
 
-<div class="pricing-section">
+<div class="pricing-section" id="packages-section">
     <h2 class="packages-heading">Packages</h2>
-    <p class="sub-heading">"For Websites"</p>
+    <p class="sub-heading">For Websites</p>
 
     <table class="pricing-table">
         <tr>
             <td class="pricing-option">
                 <h3>Website Creation (Low Ticket)</h3>
                 <p class="price">$500</p>
+                <div class="divider"></div>
                 <p class="description">Perfect for individuals and small businesses looking for a professional online presence.</p>
             </td>
 
             <td class="pricing-option">
                 <h3>Website Creation (High Ticket)</h3>
                 <p class="price">$1000</p>
+                <div class="divider"></div>
                 <p class="description">Ideal for businesses with more complex needs, requiring advanced features and customization.</p>
             </td>
         </tr>
     </table>
 </div>
+
 
         
 		<div class="Pricing" id="Pricing">
