--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
     }
 
     .pricing-table {
-        width: 94%; /* Increased the width to leave a larger gap on both sides */
+        width: 79%; /* Decreased the width to leave more space on both sides */
         margin: 0 auto; /* Center the table */
         border-collapse: collapse;
         border: 4px solid #fff; /* Increased the white border thickness */
@@ -386,7 +386,7 @@
 
     .pricing-option {
         text-align: center;
-        padding: 20px;
+        padding: 14px 20px; /* Decreased the height by 30% */
         border: 2px solid #fff; /* White border */
     }
 
@@ -397,9 +397,9 @@
     }
 
     .price {
-        font-size: 1.2em;
-        font-weight: bold;
-        color: #007BFF; /* Use the color of your choice */
+        font-size: 1.3em; /* Increased font size */
+        font-weight: 800; /* Increased font weight */
+        color: #5bc0de; /* Lighter blue color */
         margin-bottom: 10px;
     }
 
@@ -439,20 +439,21 @@
         <tr>
             <td class="pricing-option">
                 <h3>Website Creation (Low Ticket)</h3>
-                <p class="price">$500</p>
                 <div class="divider"></div>
+                <p class="price">$500</p>
                 <p class="description">Perfect for individuals and small businesses looking for a professional online presence.</p>
             </td>
 
             <td class="pricing-option">
                 <h3>Website Creation (High Ticket)</h3>
-                <p class="price">$1000</p>
                 <div class="divider"></div>
+                <p class="price">$1000</p>
                 <p class="description">Ideal for businesses with more complex needs, requiring advanced features and customization.</p>
             </td>
         </tr>
     </table>
 </div>
+
 
 
         
