--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
 				<div class="image-card">
 					<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 					<lottie-player src="https://assets.website-files.com/5837424ae11409586f837994/5e1767da10a1f51ca4fa361f_data.json" background speed="1" style="width: 200px; height: 100px" direction="1" mode="normal" loop autoplay></lottie-player>
-					<p>Subscribe and and get unlimited design requests</p>
+					<p>Subscribe and and get unlimited design request or comission a Website</p>
 				</div>
 				<div class="image-card">
 					<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 					<lottie-player src="https://assets.website-files.com/5837424ae11409586f837994/5e177abae85f69bf6f2f813a_data.json" speed="1" style="width: 300px; height: 100px" direction="1" mode="normal" loop autoplay></lottie-player>
-					<p>Get your sizzling content in just 2 days, Monday to Friday.</p>
+					<p>Get your sizzling content/design/website in just 2 days, Monday to Friday.</p>
 				</div>
 				<div class="image-card">
 					<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
@@ -165,8 +165,8 @@
 					<img class="pink-column-right" src="https://assets.website-files.com/5837424ae11409586f837994/6119d9897e15e38d7e0c8bea_52.svg" alt="">
 				</div>
 				<img src="https://assets.website-files.com/5837424ae11409586f837994/6119d7a83723f6d0114590ab_quotation.svg" alt="">
-				<h1>Stuck in a design rut? No worries!</h1>
-				<h3>Just toss us your goal, and we'll whip up a marketing plan that'll make you go "WOW!" 🚀 Get your very own marketing maestro who'll dive deep, splash around, and craft the snazziest content your brand has ever seen. It's not just cool, it's ice-cold awesome! </h3>
+				<h1>Website should work in favour of your business!</h1>
+				<h3>TURN YOUR WEBSITE INTO A SALES-GENERATING MACHINE </h3>
 			</div>
 
 			<div class="blue-container-wraper">
@@ -202,7 +202,7 @@
 						</h2>
 						<h3> Meetings? Pssht! We kicked 'em to the curb! 🚫 </h3>
 						<h2>
-							Manage with Asana or view with Whatsapp
+							Keep track with our Project manage
 						</h2>
 						<h3>Rock your content world with Trello! See what's hot and happening with ease.
 						</h3>
