--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<h2>Epic design subscriptions to supercharge your brand!</h2>
 				<a href="#Pricing"> <button class="cta-button">See Plans</button> </a>
 
-				<h5>Party with our Plans <span class="love">&#x1F496;</span> guaranteed</h5>
+				<h5>Design almost anything, <span class="love">&#x1F496;</span> even websites </h5>
 
 			</div>
 
@@ -166,7 +166,7 @@
 				</div>
 				<img src="https://assets.website-files.com/5837424ae11409586f837994/6119d7a83723f6d0114590ab_quotation.svg" alt="">
 				<h1>Website should work in favour of your business!</h1>
-				<h3>TURN YOUR WEBSITE INTO A SALES-GENERATING MACHINE </h3>
+				<h3>Turn your website into a sales genrating machine, Php, HTML, CSS, Webflow, Wordpress, webflow, figma </h3>
 			</div>
 
 			<div class="blue-container-wraper">
@@ -202,7 +202,7 @@
 						</h2>
 						<h3> Meetings? Pssht! We kicked 'em to the curb! 🚫 </h3>
 						<h2>
-							Keep track with our Project manage
+							Keep track with our Project manager tool
 						</h2>
 						<h3>Rock your content world with Trello! See what's hot and happening with ease.
 						</h3>
