--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
 			<img class="recent-works-img-top-right" src="images/rwitr.png" alt="">
 
 			<h1>Recent Works</h1>
-			<h2>Award winning designs, and nothing less</h2>
-			<a href="https://www.figma.com/proto/xMf3kagAMyUSNulcEMNUAU/Sample-Work?page-id=0%3A1&node-id=1-8008&viewport=252%2C48%2C0.25&scaling=min-zoom&starting-point-node-id=1%3A2"> <button>View website portfolio</button></a>
+<h2>Award winning designs, and nothing less</h2>
+<a href="portfolio.html"><button>View website portfolio</button></a>
 
 			<div class="projects-grid">
 				<img src="https://assets.zyrosite.com/YKb19X3qgWCjnnre/whatever-you-like-your-website-to-be-1-Y4L8GDqaOpF2pDP8.gif" alt="">
