--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
 			<h1>Recent Works</h1>
 <h2>Award winning designs, and nothing less</h2>
-<a href="portfolio.html"><button>View website portfolio</button></a>
+<a href="Sample/portfolio.html"><button>View website portfolio</button></a>
 
 			<div class="projects-grid">
 				<img src="https://assets.zyrosite.com/YKb19X3qgWCjnnre/whatever-you-like-your-website-to-be-1-Y4L8GDqaOpF2pDP8.gif" alt="">
