--- a/Sample/index.html
+++ b/Sample/index.html
@@ -8,6 +8,17 @@
     <link rel="icon" type="image/png" href="contentguy.png">
     <style>
         body {
+    cursor: url('buttons/mouse.ico'), auto;
+    /* Existing styles */
+    margin: 0;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+        body {
             margin: 0;
             overflow: hidden;
             display: flex;
@@ -16,16 +27,17 @@
             height: 100vh;
         }
 
-        #loading-screen {
+        #loading-container {
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: url('1.png') no-repeat center center fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 1in;
+            height: 1in;
+            background: url('https://media.tenor.com/I6kN-6X7nhAAAAAi/loading-buffering.gif') no-repeat center center;
             background-size: cover;
             z-index: 9999;
-            display: none;
+            display: none; /* Initially hidden */
         }
 
         #image-container {
@@ -55,26 +67,25 @@
             transform: scale(1.05);
         }
     </style>
-</head>
-<body>
-    <div id="loading-screen"></div>
-
-    <div id="image-container">
-        <img id="image-viewer" src="1.webp" alt="Image 1" loading="eager">
-    </div>
-
-    <img id="reset-button" src="buttons/2.png" alt="Reset Button" onclick="resetToImage1()">
-
     <script>
+        // Preload images and loading screen
         const images = Array.from({ length: 12 }, (_, index) => `${index + 1}.webp`);
-        let currentIndex = 0;
+        const loadingScreenImage = new Image();
+        loadingScreenImage.src = 'https://media.tenor.com/I6kN-6X7nhAAAAAi/loading-buffering.gif';
+
+        function preloadImages() {
+            images.forEach((image) => {
+                const img = new Image();
+                img.src = image;
+            });
+        }
 
         function showLoadingScreen() {
-            document.getElementById('loading-screen').style.display = 'block';
+            document.getElementById('loading-container').style.display = 'block';
         }
 
         function hideLoadingScreen() {
-            document.getElementById('loading-screen').style.display = 'none';
+            document.getElementById('loading-container').style.display = 'none';
         }
 
         function preloadNextImage() {
@@ -83,11 +94,11 @@
             nextImage.src = images[nextIndex];
         }
 
+        let currentIndex = 0;
+
         function renderImage(src) {
-            showLoadingScreen(); // Show loading screen before rendering the next image
             document.getElementById('image-viewer').src = src;
             preloadNextImage();
-            setTimeout(hideLoadingScreen, 500); // Hide loading screen after a delay (adjust the time as needed)
         }
 
         function resetToImage1() {
@@ -96,11 +107,16 @@
 
         function changeImage() {
             currentIndex = (currentIndex + 1) % images.length;
+            preloadImages(); // Preload images in the background for a smoother transition
             renderImage(images[currentIndex]);
         }
 
         function handleNextImage() {
-            changeImage();
+            showLoadingScreen(); // Show loading screen before rendering the next image
+            setTimeout(() => {
+                hideLoadingScreen(); // Hide loading screen after a short delay
+                changeImage();
+            }, 100); // Adjust the delay as needed
         }
 
         document.addEventListener('click', handleNextImage);
@@ -109,6 +125,17 @@
                 handleNextImage();
             }
         });
+
+        preloadImages(); // Preload initial set of images when the page loads
     </script>
+</head>
+<body>
+    <div id="loading-container"></div>
+
+    <div id="image-container">
+        <img id="image-viewer" src="1.webp" alt="Image 1" loading="eager">
+    </div>
+
+    <img id="reset-button" src="buttons/2.png" alt="Reset Button" onclick="resetToImage1()">
 </body>
 </html>
