--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
 			<h1>Recent Works</h1>
 <h2>Award winning designs, and nothing less</h2>
-<a href="Sample/index.html"><button>View website portfolio</button></a>
+<a href="www.contguy.co/portfolio"><button>View website portfolio</button></a>
 
 			<div class="projects-grid">
 				<img src="https://assets.zyrosite.com/YKb19X3qgWCjnnre/whatever-you-like-your-website-to-be-1-Y4L8GDqaOpF2pDP8.gif" alt="">
