--- a/index.html
+++ b/index.html
@@ -285,14 +285,19 @@
 
 			</div>
 
-		</div>
-		<div class="recent-works" id="recent-works">
-			<img class="recent-works-img-top" src="https://assets.website-files.com/5837424ae11409586f837994/6119d83a539ea14de7db7bac_Group%2022.svg" alt="">
-			<img class="recent-works-img-top-right" src="images/rwitr.png" alt="">
+	</div>
+<div class="recent-works" id="recent-works">
+    <img class="recent-works-img-top" src="https://assets.website-files.com/5837424ae11409586f837994/6119d83a539ea14de7db7bac_Group%2022.svg" alt="">
+    <img class="recent-works-img-top-right" src="images/rwitr.png" alt="">
 
-			<h1>Recent Works</h1>
-<h2>Award winning designs, and nothing less</h2>
-<a href="portfolio"><button>View website portfolio</button></a>
+    <h1>Recent Works</h1>
+    <h2>Award winning designs, and nothing less</h2>
+    <div class="button-container">
+        <a href="contentguy.co/portfolio"><button>View Website Portfolio</button></a>
+        <a href="behance.net/ridwanzune"><button>View Design Portfolio</button></a>
+    </div>
+</div>
+
 
 			<div class="projects-grid">
 				<img src="https://assets.zyrosite.com/YKb19X3qgWCjnnre/whatever-you-like-your-website-to-be-1-Y4L8GDqaOpF2pDP8.gif" alt="">
