--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 				</div>
 				<img src="https://assets.website-files.com/5837424ae11409586f837994/6119d7a83723f6d0114590ab_quotation.svg" alt="">
 				<h1>Website should work in favour of your business!</h1>
-				<h3>Turn your website into a sales genrating machine, Php, HTML, CSS, Webflow, Wordpress, webflow, figma </h3>
+				<h3>Turn your website into a sales genrating machine, Php, HTML, CSS, Webflow, Wordpress, figma </h3>
 			</div>
 
 			<div class="blue-container-wraper">
