--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
     <h1>Recent Works</h1>
     <h2>Award winning designs, and nothing less</h2>
     <div class="button-container">
-        <a href="contentguy.co/portfolio"><button>View Website Portfolio</button></a>
-        <a href="behance.net/ridwanzune"><button>View Design Portfolio</button></a>
+        <a href="https://contentguy.co/portfolio"><button>View Website Portfolio</button></a>
+        <a href="https://behance.net/ridwanzune"><button>View Design Portfolio</button></a>
     </div>
 </div>
 
